test/pass/success_hello_world/src/SuccessHelloWorld.hx
package;

class SuccessHelloWorld {
	public static function hello():String {
		return "Hello, World!";
	}
}
