test/fail/fail_partial/src/FailPartial.hx
package;

class FailPartial {
	public static function identity<T>(x:T):T {
		return x;
	}
}
